# RealPyTranslator

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/realpytranslator/: __init__.py  hook.py  model.py  realpytranslator.rpy  server.py  translate.py
