[project]
name = "realpytranslator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "openai>=2.8.1",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
serve = "realpytranslator:serve"
